--- a/springboot-adminlte-admin/src/main/resources/application.yml
+++ b/springboot-adminlte-admin/src/main/resources/application.yml
@@ -5,9 +5,9 @@ spring:
     datasource:
           druid:
                 type : com.alibaba.druid.pool.DruidDataSource  
-                url : jdbc:mysql://10.20.1.227:3306/adminlte-admin?useUnicode=true&characterEncoding=utf-8  
-                username: root  
-                password : 123456
+                url : jdbc:mysql://:3306/adminlte-admin?useUnicode=true&characterEncoding=utf-8  
+                username:   
+                password : 
                 driverClassName : com.mysql.jdbc.Driver  
                 initialSize: 5  
                 minIdle: 5  
