--- a/AdminLTE-admin/src/main/resources/properties/jdbc.properties
+++ b/AdminLTE-admin/src/main/resources/properties/jdbc.properties
@@ -1,5 +1,5 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://10.20.1.227:3306/adminlte-admin1?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
-jdbc.username=root
-jdbc.password=123456
+jdbc.url=jdbc:mysql://:3306/adminlte-admin1?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
+jdbc.username=
+jdbc.password=
 validationQuery=SELECT 1
